# ptchat

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  database.c  main.c  main.h  readme.md  test_server.c
src/: auth.c  auth.h  main.c  message.c  message.h  network.c  network.h  user.c  user.h  utils.c  utils.h
